Added fake data generator activity that can be used in combination with csv import activity.